@@ -1,67 +1,60 @@
-// Copyright 2021 The Terasology Foundation
+// Copyright 2022 The Terasology Foundation
 // SPDX-License-Identifier: Apache-2.0
 package org.terasology.engine.persistence.internal;
 
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Lists;
 import org.joml.Vector3f;
 import org.joml.Vector3i;
 import org.joml.Vector3ic;
-import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.MethodOrderer;
 import org.junit.jupiter.api.Order;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestMethodOrder;
-import org.junit.jupiter.api.io.TempDir;
-import org.mockito.ArgumentMatchers;
-import org.terasology.engine.TerasologyTestingEnvironment;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.terasology.engine.config.Config;
+import org.terasology.engine.config.SystemConfig;
+import org.terasology.engine.context.Context;
+import org.terasology.engine.core.GameEngine;
 import org.terasology.engine.core.PathManager;
 import org.terasology.engine.core.bootstrap.EntitySystemSetupUtil;
 import org.terasology.engine.core.module.ModuleManager;
+import org.terasology.engine.core.subsystem.NonPlayerVisibleSubsystem;
 import org.terasology.engine.entitySystem.entity.EntityRef;
 import org.terasology.engine.entitySystem.entity.internal.EngineEntityManager;
+import org.terasology.engine.integrationenvironment.jupiter.IntegrationEnvironment;
+import org.terasology.engine.integrationenvironment.jupiter.MTEExtension;
 import org.terasology.engine.logic.location.LocationComponent;
-import org.terasology.engine.network.Client;
-import org.terasology.engine.network.ClientComponent;
+import org.terasology.engine.logic.players.LocalPlayer;
 import org.terasology.engine.network.NetworkMode;
 import org.terasology.engine.network.NetworkSystem;
 import org.terasology.engine.persistence.ChunkStore;
 import org.terasology.engine.persistence.PlayerStore;
 import org.terasology.engine.persistence.StorageManager;
-import org.terasology.engine.recording.CharacterStateEventPositionMap;
-import org.terasology.engine.recording.DirectionAndOriginPosRecorderList;
 import org.terasology.engine.recording.RecordAndReplayCurrentStatus;
 import org.terasology.engine.recording.RecordAndReplaySerializer;
 import org.terasology.engine.recording.RecordAndReplayUtils;
-import org.terasology.engine.recording.RecordedEventStore;
 import org.terasology.engine.registry.CoreRegistry;
-import org.terasology.engine.world.WorldProvider;
+import org.terasology.engine.registry.In;
 import org.terasology.engine.world.block.Block;
 import org.terasology.engine.world.block.BlockManager;
-import org.terasology.engine.world.block.family.SymmetricFamily;
-import org.terasology.engine.world.block.loader.BlockFamilyDefinition;
-import org.terasology.engine.world.block.loader.BlockFamilyDefinitionData;
 import org.terasology.engine.world.chunks.Chunk;
 import org.terasology.engine.world.chunks.ChunkProvider;
 import org.terasology.engine.world.chunks.blockdata.ExtraBlockDataManager;
 import org.terasology.engine.world.chunks.internal.ChunkImpl;
-import org.terasology.engine.world.internal.WorldInfo;
-import org.terasology.gestalt.assets.ResourceUrn;
-import org.terasology.gestalt.assets.management.AssetManager;
 import org.terasology.gestalt.module.ModuleEnvironment;
 import org.terasology.joml.geom.AABBfc;
-import org.terasology.reflection.TypeRegistry;
 import org.terasology.unittest.stubs.EntityRefComponent;
 import org.terasology.unittest.stubs.StringComponent;
 
-import java.io.File;
-import java.io.IOException;
-import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Arrays;
 import java.util.List;
 
+import static com.google.common.truth.Truth.assertThat;
+import static com.google.common.truth.Truth.assertWithMessage;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -70,19 +63,20 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
-@Tag("TteTest")
-public class StorageManagerTest extends TerasologyTestingEnvironment {
-
-    public static final String PLAYER_ID = "someId";
+@Tag("MteTest")
+@ExtendWith({MockitoExtension.class, MTEExtension.class})
+@IntegrationEnvironment(
+        networkMode = NetworkMode.NONE,  // A mode with a LocalPlayer.
+        subsystem = StorageManagerTest.EnableWritingSaveGames.class
+)
+public class StorageManagerTest {
     public static final Vector3ic CHUNK_POS = new Vector3i(1, 2, 3);
 
-    private static File temporaryFolder;
+    @In
+    EngineEntityManager entityManager;
 
+    private String playerId;
     private ModuleEnvironment moduleEnvironment;
-    private ReadWriteStorageManager esm;
-    private EngineEntityManager entityManager;
-    private BlockManager blockManager;
-    private ExtraBlockDataManager extraDataManager;
     private Block testBlock;
     private Block testBlock2;
     private EntityRef character;
@@ -91,131 +85,90 @@ public class StorageManagerTest extends TerasologyTestingEnvironment {
     private RecordAndReplayUtils recordAndReplayUtils;
     private RecordAndReplayCurrentStatus recordAndReplayCurrentStatus;
 
-    @BeforeAll
-    static void createFolder() throws IOException {
-        File createdFolder = File.createTempFile("junit", "", null);
-        createdFolder.delete();
-        createdFolder.mkdir();
-        temporaryFolder = createdFolder;
-    }
-
     @BeforeEach
-    public void setup(@TempDir Path tempHome) throws Exception {
-        super.setup();
-        PathManager.getInstance().useOverrideHomePath(tempHome);
-        savePath = PathManager.getInstance().getSavePath("testSave");
+    void setupLocals(
+            StorageManager storageManager, LocalPlayer player, NetworkSystem network, BlockManager blockManager,
+            ModuleManager moduleManager, Config config, Context context) {
+        assertThat(storageManager).isInstanceOf(ReadWriteStorageManager.class);
+        context.put(ReadWriteStorageManager.class, (ReadWriteStorageManager) storageManager);
 
-        assert !Files.isRegularFile(tempHome.resolve("global.dat"));
+        savePath = getSavePath(config);
 
-        entityManager = context.get(EngineEntityManager.class);
-        moduleEnvironment = mock(ModuleEnvironment.class);
-        blockManager = context.get(BlockManager.class);
-        extraDataManager = context.get(ExtraBlockDataManager.class);
+        assertWithMessage("Leftover files in %s", savePath)
+                .that(savePath.resolve("global.dat").toFile().exists())
+                .isFalse();
 
-        ModuleManager moduleManager = mock(ModuleManager.class);
+        character = player.getCharacterEntity();
+        assertThat(character).isNotEqualTo(EntityRef.NULL);
 
-        when(moduleManager.getEnvironment()).thenReturn(moduleEnvironment);
+        var clients = ImmutableList.copyOf(network.getPlayers());
+        assertThat(clients).hasSize(1);
+        playerId = clients.get(0).getId();
 
-        RecordedEventStore recordedEventStore = new RecordedEventStore();
-        recordAndReplayUtils = new RecordAndReplayUtils();
-        CharacterStateEventPositionMap characterStateEventPositionMap = new CharacterStateEventPositionMap();
-        DirectionAndOriginPosRecorderList directionAndOriginPosRecorderList = new DirectionAndOriginPosRecorderList();
-        recordAndReplaySerializer = new RecordAndReplaySerializer(entityManager, recordedEventStore,
-                recordAndReplayUtils, characterStateEventPositionMap, directionAndOriginPosRecorderList,
-                moduleManager, mock(TypeRegistry.class));
-        recordAndReplayCurrentStatus = context.get(RecordAndReplayCurrentStatus.class);
+        testBlock = blockManager.getBlock("test:testblock");
+        testBlock2 = blockManager.getBlock("test:testblock2");
 
-
-        esm = new ReadWriteStorageManager(savePath, moduleEnvironment, entityManager, blockManager, extraDataManager,
-                false, recordAndReplaySerializer, recordAndReplayUtils, recordAndReplayCurrentStatus);
-        context.put(StorageManager.class, esm);
-
-        this.character = entityManager.create();
-        Client client = createClientMock(PLAYER_ID, character);
-        NetworkSystem networkSystem = mock(NetworkSystem.class);
-        when(networkSystem.getMode()).thenReturn(NetworkMode.NONE);
-        when(networkSystem.getPlayers()).thenReturn(Arrays.asList(client));
-        context.put(NetworkSystem.class, networkSystem);
-
-        AssetManager assetManager = context.get(AssetManager.class);
-        BlockFamilyDefinitionData data = new BlockFamilyDefinitionData();
-        data.setBlockFamily(SymmetricFamily.class);
-        assetManager.loadAsset(new ResourceUrn("test:testblock"), data, BlockFamilyDefinition.class);
-        assetManager.loadAsset(new ResourceUrn("test:testblock2"), data, BlockFamilyDefinition.class);
-        testBlock = context.get(BlockManager.class).getBlock("test:testblock");
-        testBlock2 = context.get(BlockManager.class).getBlock("test:testblock2");
-
-        context.put(ChunkProvider.class, mock(ChunkProvider.class));
-        WorldProvider worldProvider = mock(WorldProvider.class);
-        when(worldProvider.getWorldInfo()).thenReturn(new WorldInfo());
-        context.put(WorldProvider.class, worldProvider);
+        moduleEnvironment = moduleManager.getEnvironment();
     }
 
-    private Client createClientMock(String clientId, EntityRef charac) {
-        EntityRef clientEntity = createClientEntity(charac);
-        Client client = mock(Client.class);
-        when(client.getEntity()).thenReturn(clientEntity);
-        when(client.getId()).thenReturn(clientId);
-        return client;
-    }
-
-    private EntityRef createClientEntity(EntityRef charac) {
-        ClientComponent clientComponent = new ClientComponent();
-        clientComponent.local = true;
-        clientComponent.character = charac;
-        EntityRef clientEntity = entityManager.create(clientComponent);
-        return clientEntity;
+    Path getSavePath(Config config) {
+        // TODO: add a more direct way of inspecting StorageManager's path.
+        //   This way of getting the game title (and thus the path) is a bit brittle,
+        //   because world title and game title are not _required_ to be identical.
+        String gameTitle = config.getWorldGeneration().getWorldTitle();
+        return PathManager.getInstance().getSavePath(gameTitle);
     }
 
     @Test
     @Order(1)
-    public void testGetUnstoredPlayerReturnsNewStor() {
-        PlayerStore store = esm.loadPlayerStore(PLAYER_ID);
+    public void testGetUnstoredPlayerReturnsNewStor(StorageManager esm) {
+        PlayerStore store = esm.loadPlayerStore(playerId);
         assertNotNull(store);
         assertEquals(new Vector3f(), store.getRelevanceLocation());
         assertFalse(store.hasCharacter());
-        assertEquals(PLAYER_ID, store.getId());
+        assertEquals(playerId, store.getId());
     }
 
     @Test
-    public void testStoreAndRestoreOfPlayerWithoutCharacter() {
+    public void testStoreAndRestoreOfPlayerWithoutCharacter(StorageManager esm) {
         // remove character from player:
         character.destroy();
 
         esm.waitForCompletionOfPreviousSaveAndStartSaving();
         esm.finishSavingAndShutdown();
 
-        PlayerStore restoredStore = esm.loadPlayerStore(PLAYER_ID);
+        PlayerStore restoredStore = esm.loadPlayerStore(playerId);
         assertNotNull(restoredStore);
         assertFalse(restoredStore.hasCharacter());
         assertEquals(new Vector3f(), restoredStore.getRelevanceLocation());
     }
 
     @Test
-    public void testPlayerRelevanceLocationSurvivesStorage() {
+    public void testPlayerRelevanceLocationSurvivesStorage(StorageManager esm) {
         Vector3f loc = new Vector3f(1, 2, 3);
         character.addComponent(new LocationComponent(loc));
 
         esm.waitForCompletionOfPreviousSaveAndStartSaving();
         esm.finishSavingAndShutdown();
 
-        PlayerStore restored = esm.loadPlayerStore(PLAYER_ID);
+        PlayerStore restored = esm.loadPlayerStore(playerId);
         assertEquals(loc, restored.getRelevanceLocation());
     }
 
     @Test
-    public void testCharacterSurvivesStorage() {
+    public void testCharacterSurvivesStorage(StorageManager esm) {
         esm.waitForCompletionOfPreviousSaveAndStartSaving();
         esm.finishSavingAndShutdown();
 
-        PlayerStore restored = esm.loadPlayerStore(PLAYER_ID);
+        PlayerStore restored = esm.loadPlayerStore(playerId);
         restored.restoreEntities();
         assertTrue(restored.hasCharacter());
         assertEquals(character, restored.getCharacter());
     }
 
     @Test
-    public void testGlobalEntitiesStoredAndRestored() throws Exception {
+    public void testGlobalEntitiesStoredAndRestored(
+            ReadWriteStorageManager esm, BlockManager blockManager, ExtraBlockDataManager extraDataManager, Context context) throws Exception {
         EntityRef entity = entityManager.create(new StringComponent("Test"));
         long entityId = entity.getId();
 
@@ -227,7 +180,7 @@ public class StorageManagerTest extends TerasologyTestingEnvironment {
         EngineEntityManager newEntityManager = context.get(EngineEntityManager.class);
 
         StorageManager newSM = new ReadWriteStorageManager(savePath, moduleEnvironment, newEntityManager, blockManager,
-                extraDataManager, false, recordAndReplaySerializer, recordAndReplayUtils, recordAndReplayCurrentStatus);
+                extraDataManager, esm.isStoreChunksInZips(), recordAndReplaySerializer, recordAndReplayUtils, recordAndReplayCurrentStatus);
         newSM.loadGlobalStore();
 
         List<EntityRef> entities = Lists.newArrayList(newEntityManager.getEntitiesWith(StringComponent.class));
@@ -237,7 +190,8 @@ public class StorageManagerTest extends TerasologyTestingEnvironment {
 
 
     @Test
-    public void testReferenceRemainsValidOverStorageRestoral() throws Exception {
+    public void testReferenceRemainsValidOverStorageRestoral(
+            StorageManager esm, BlockManager blockManager, ExtraBlockDataManager extraDataManager, Context context) throws Exception {
         EntityRef someEntity = entityManager.create();
         character.addComponent(new EntityRefComponent(someEntity));
 
@@ -251,23 +205,24 @@ public class StorageManagerTest extends TerasologyTestingEnvironment {
                 extraDataManager, false, recordAndReplaySerializer, recordAndReplayUtils, recordAndReplayCurrentStatus);
         newSM.loadGlobalStore();
 
-        PlayerStore restored = newSM.loadPlayerStore(PLAYER_ID);
+        PlayerStore restored = newSM.loadPlayerStore(playerId);
         restored.restoreEntities();
         assertTrue(restored.getCharacter().getComponent(EntityRefComponent.class).entityRef.exists());
     }
 
     @Test
-    public void testGetUnstoredChunkReturnsNothing() {
-        esm.loadChunkStore(CHUNK_POS);
+    public void testGetUnstoredChunkReturnsNothing(StorageManager esm) {
+        assertThat(esm.loadChunkStore(CHUNK_POS)).isNull();
     }
 
     @Test
-    public void testStoreAndRestoreChunkStore() {
+    public void testStoreAndRestoreChunkStore(
+            StorageManager esm, BlockManager blockManager, ExtraBlockDataManager extraDataManager) {
         Chunk chunk = new ChunkImpl(CHUNK_POS, blockManager, extraDataManager);
         chunk.setBlock(0, 0, 0, testBlock);
         chunk.markReady();
         ChunkProvider chunkProvider = mock(ChunkProvider.class);
-        when(chunkProvider.getAllChunks()).thenReturn(Arrays.asList(chunk));
+        when(chunkProvider.getAllChunks()).thenReturn(List.of(chunk));
         CoreRegistry.put(ChunkProvider.class, chunkProvider);
 
         esm.waitForCompletionOfPreviousSaveAndStartSaving();
@@ -281,18 +236,17 @@ public class StorageManagerTest extends TerasologyTestingEnvironment {
     }
 
     @Test
-    public void testChunkSurvivesStorageSaveAndRestore() throws Exception {
+    public void testChunkSurvivesStorageSaveAndRestore(
+            ReadWriteStorageManager esm, BlockManager blockManager, ExtraBlockDataManager extraDataManager,
+            Context context) throws Exception {
         Chunk chunk = new ChunkImpl(CHUNK_POS, blockManager, extraDataManager);
         chunk.setBlock(0, 0, 0, testBlock);
         chunk.setBlock(0, 4, 2, testBlock2);
         chunk.markReady();
         ChunkProvider chunkProvider = mock(ChunkProvider.class);
-        when(chunkProvider.getAllChunks()).thenReturn(Arrays.asList(chunk));
-        when(chunkProvider.getChunk(ArgumentMatchers.any(Vector3ic.class))).thenReturn(chunk);
+        when(chunkProvider.getAllChunks()).thenReturn(List.of(chunk));
         CoreRegistry.put(ChunkProvider.class, chunkProvider);
-        boolean storeChunkInZips = true;
 
-        esm.setStoreChunksInZips(storeChunkInZips);
         esm.waitForCompletionOfPreviousSaveAndStartSaving();
         esm.finishSavingAndShutdown();
 
@@ -300,7 +254,7 @@ public class StorageManagerTest extends TerasologyTestingEnvironment {
         EntitySystemSetupUtil.addEntityManagementRelatedClasses(context);
         EngineEntityManager newEntityManager = context.get(EngineEntityManager.class);
         StorageManager newSM = new ReadWriteStorageManager(savePath, moduleEnvironment, newEntityManager, blockManager,
-                extraDataManager, storeChunkInZips, recordAndReplaySerializer, recordAndReplayUtils,
+                extraDataManager, esm.isStoreChunksInZips(), recordAndReplaySerializer, recordAndReplayUtils,
                 recordAndReplayCurrentStatus);
         newSM.loadGlobalStore();
 
@@ -313,12 +267,14 @@ public class StorageManagerTest extends TerasologyTestingEnvironment {
     }
 
     @Test
-    public void testEntitySurvivesStorageInChunkStore() throws Exception {
+    public void testEntitySurvivesStorageInChunkStore(
+            ReadWriteStorageManager esm, BlockManager blockManager, ExtraBlockDataManager extraDataManager,
+            Context context) throws Exception {
         Chunk chunk = new ChunkImpl(CHUNK_POS, blockManager, extraDataManager);
         chunk.setBlock(0, 0, 0, testBlock);
         chunk.markReady();
         ChunkProvider chunkProvider = mock(ChunkProvider.class);
-        when(chunkProvider.getAllChunks()).thenReturn(Arrays.asList(chunk));
+        when(chunkProvider.getAllChunks()).thenReturn(List.of(chunk));
         CoreRegistry.put(ChunkProvider.class, chunkProvider);
         EntityRef entity = entityManager.create();
         long id = entity.getId();
@@ -337,7 +293,7 @@ public class StorageManagerTest extends TerasologyTestingEnvironment {
         EntitySystemSetupUtil.addEntityManagementRelatedClasses(context);
         EngineEntityManager newEntityManager = context.get(EngineEntityManager.class);
         StorageManager newSM = new ReadWriteStorageManager(savePath, moduleEnvironment, newEntityManager, blockManager,
-                extraDataManager, false, recordAndReplaySerializer, recordAndReplayUtils, recordAndReplayCurrentStatus);
+                extraDataManager, esm.isStoreChunksInZips(), recordAndReplaySerializer, recordAndReplayUtils, recordAndReplayCurrentStatus);
         newSM.loadGlobalStore();
 
         ChunkStore restored = newSM.loadChunkStore(CHUNK_POS);
@@ -349,10 +305,17 @@ public class StorageManagerTest extends TerasologyTestingEnvironment {
 
 
     @Test
-    public void testCanSavePlayerWithoutUnloading() throws Exception {
+    public void testCanSavePlayerWithoutUnloading(StorageManager esm) {
         esm.waitForCompletionOfPreviousSaveAndStartSaving();
         esm.finishSavingAndShutdown();
 
         assertTrue(character.isActive());
+    }
+
+    static class EnableWritingSaveGames extends NonPlayerVisibleSubsystem {
+        @Override
+        public void initialise(GameEngine engine, Context rootContext) {
+            rootContext.getValue(SystemConfig.class).writeSaveGamesEnabled.set(true);
+        }
     }
 }
